Worked on About Me HTML Page

--- a/HTML/"About Z" Project/fursona.html
+++ b/HTML/"About Z" Project/fursona.html
@@ -1,47 +1,30 @@
 <!DOCTYPE html>
 
 <html>
-    <!--Head Contains Title & Other Page Information-->
+    
     <head>
         <title>@ZcraftElite/Z - About Me</title>
     </head>
 
-    <!--Body Contains Main Page-->
     <body>
         <div id="header" class="header">
             <h1>@ZcraftElite/Z - About Me</h1>
             <a>&nbsp</a><a href="https://en.pronouns.page/@zcraftelite">Pronoun Page (External)</a><a>&nbsp</a>
-            <a>&nbsp</a><a href="#intro">Intro</a><a>&nbsp</a>
-            <a>&nbsp</a><a href="#listoffacts">List of Facts</a><a>&nbsp</a>
-            <a>&nbsp</a><a href="#fursona">Fursona Backstory & Info</a><a>&nbsp</a>
-            <a>&nbsp</a><a href="#contact">Contact Me</a><a>&nbsp</a>
+            <a>&nbsp</a><a href="./index.html#intro">Intro</a><a>&nbsp</a>
+            <a>&nbsp</a><a href="./index.html#listoffacts">List of Facts</a><a>&nbsp</a>
+            <a>&nbsp</a><a href="./fursona.html">Fursona Backstory & Info</a><a>&nbsp</a>
+            <a>&nbsp</a><a href="./index.html#contact">Contact Me</a><a>&nbsp</a>
         <br>
         </div>
-        <div id="intro" class="paragraph">
-            <h2>Who am I?</h2>
-            <p><em>Document was made October 20th 2023</em></p>
-            <p>My name is <strong>Z (Zayden) Comerford</strong><br>You may know me as ZcraftElite.<br><br>At the time of writing, I am a <strong>10th Grade Student</strong> at <strong>Green Run Collegiate</strong>. I am most active on Discord, YouTube & X/Twitter from time to time and spend alot of time coding things and messing with Technology. I have many different online accounts and spend alot of time just doing random things on my day to day basis.</p>
-        </div>
-        <br><br>
-        <div id="listoffacts">
-            <h2>List of Facts About Me</h2>
-            <ul>
-                <li>I was born in August 2008</li>
-                <li>I care about almost everyone and everything</li>
-                <li>I have a handsome boyfriend named Ash</li>
-                <li>I am a half-closeted femboy</li>
-                <li>I am a furry (<a href="#fursona">See Fursona</a>)</li>
-                <li>I spend 5 hours on average using Social Media and Stuff</li>
-            </ul>
-        </div>
-        <br><br>
         <div id="fursona">
-            <h2>My Fursona</h2>
-            <a href="#fursona-maininfo">Main Info</a>
-            <a href="#fursona-backstory">Backstory</a>
-            <a href="#fursona-description">Physical Description</a>
-            <a href="#fursona-listoffacts">List of Fursona Facts</a>
-            <br>
+            <div id="fursona-header" class="header">
+                <a>Fursona Info</a><br>
+                <a>&nbsp</a><a href="#fursona-maininfo">Main Info</a><a>&nbsp</a>
+                <a>&nbsp</a><a href="#fursona-backstory">Backstory</a><a>&nbsp</a>
+                <a>&nbsp</a><a href="#fursona-description">Physical Description</a><a>&nbsp</a>
+                <a>&nbsp</a><a href="#fursona-listoffacts">List of Fursona Facts</a><a>&nbsp</a>
+            </div>
+                <br>
             <div id="fursona-maininfo">
                 <h3>Main Info</h3>
                 <p><strong>Name</strong>: Z
@@ -70,19 +53,8 @@
                 <p>Z is a Protogen furry, resembling SCP-1472 (Mal0). They have a sleek, dark-grey fur that exudes an air of mystery. Their most striking feature is a skull with an integrated visor, which projects their emotions and eyes onto its screen, replacing traditional facial expressions. Adding to their mystique, Z bears a distinctive bite mark on their right neck, a haunting reminder of a vampire encounter. But what truly sets them apart is their rare gift of reality-bending abilities, allowing them to manipulate the world around them.</p>
             </div>
         </div>
-        <br><br>
-        <div id="contact">
-            <h2>Contact Me</h2>
-            <ul>
-                <li><a href="https://discord.com/users/926788037785047050">DM me on Discord</a><br></li>
-                <li><a href="https://twitter.com/zcraftelite">DM me on Twitter</a><br></li>
-                <li><a href="mailto:zcomer4dthesecond@gmail.com">Send an Email</a><br></li>
-                <li><a href="tel:7573461231">Call or Text my Number</a><br></li>
-                <li><a href="https://linktr.ee/zcraftelite">See all my online profiles</a><br></li>
-            </ul>
-        </div>
     </body>
-
+    
     <style>
         div.paragraph {
             width: 700px;
@@ -90,7 +62,7 @@
         }
         div.header {
             text-align: center;
-        }
+        }        
     </style>
 
 </html>
