--- a/HTML/"Ship To It" Example/02 - Table Rows.html
+++ b/HTML/"Ship To It" Example/02 - Table Rows.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!--Before displaying data, we must first create the table that will contain the data by using the <table> element. The <table> element will contain all of the tabular data we plan on displaying.-->
+<!--In many programs that use tables, the table is already predefined for you, meaning that it contains the rows, columns, and cells that will hold data. In HTML, all of these components must be created.
+
+The first step in entering data into the table is to add rows using the table row element: <tr>.-->
 <html>
 <head>
   <title>Ship To It - Company Packing List</title>
@@ -17,7 +19,10 @@
 
   <div class="search">Search the table</div>
   <table>
-
+    <tr>
+    </tr>
+    <tr>
+    </tr>
   </table>
 </body>
 </html>
