--- a/HTML/Lesson 5 - Multiple Examples/03 - Checking Text Length.html
+++ b/HTML/Lesson 5 - Multiple Examples/03 - Checking Text Length.html
@@ -2,15 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Required</title>
+    <title>Sign Up Page</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
-    <script type="text/javascript" src="login.js" defer></script>
   </head>
   <body>
     <section class="overlay">
-      <h1 id="message"></h1>
-      <a href="index.html">Go back</a>
+      <h1>Sign Up</h1>
+      <p>Create an account:</p>
+      <form action="submission.html" method="GET">
+        <!--Add the minlength and maxlength attributes to the input fields-->
+        <label for="username">Username:</label>
+        <br>
+        <input id="username" name="username" type="text" minlength="3" maxlength="15" required>
+        <br>
+        <label for="pw">Password:</label>
+        <br>
+        <input id="pw" name="pw" type="password" minlength="8" maxlength="15" required>
+        <br>
+        <input type="submit" value="Submit">
+      </form>
     </section>
   </body>
 </html>
