--- a/HTML/Lesson 5 - Multiple Examples/04 - Matching a Pattern.html
+++ b/HTML/Lesson 5 - Multiple Examples/04 - Matching a Pattern.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--In addition to checking the length of a text, we could also add a validation to check how the text was provided. For cases when we want user input to follow specific guidelines, we use the pattern attribute and assign it a regular expression, or regex. Regular expressions are a sequence of characters that make up a search pattern. If the input matches the regex, the form can be submitted.
+
+Let’s say we wanted to check for a valid credit card number (a 14 to 16 digit number). We could use the regex: [0-9]{14,16} which checks that the user provided only numbers and that they entered at least 14 digits and at most 16 digits.-->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
