--- a/Site/index.html
+++ b/Site/index.html
@@ -7,11 +7,11 @@
     </head>
 
     <body>
-        <div id="under-contruction-notice" class="centered">
-            <h1 style="color: white;">ZcraftElite's Ultimate Coding Respiratory</h1>
+        <div id="under-contruction-notice" class="under-contruction-notice">
+            <h1>ZcraftElite's Ultimate Coding Respiratory</h1>
             <br>
-            <h1 style="color: white;">Under Construction</h1>
-            <p style="color: white;">The site for this repiratory is still under construction.<br>Check back Later!</p>
+            <h1>Under Construction</h1>
+            <p>The site for this repiratory is still under construction.<br>Check back Later!</p>
         </div>
     </body>
 </html>
